# empty-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
Source/: CMakeLists.txt  Main.cpp
